2007-11-19  Tor Lillqvist  <tml@novell.com>

	* libgimpwidgets/gimpcolorscale.c
	(gimp_color_scale_render_stipple): Don't write past end of
	buffer. (#399484)

2007-11-18  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleselecttool.c: Cosmitics. More strictly
	align static function prototypes and consistently use the name
	rect_sel_tool for pointers to GimpRectSelectTool.

2007-11-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimp/gimp.def: forgot in previous commit

2007-11-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/vectors.pdb:  add code for
	vectors-export-to-file and vectors-export-to-string, as
	requested in bug #497159.

	* app/pdb/vectors_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpvectors_pdb.c
	* libgimp/gimpvectors_pdb.h: rebuilt accordingly.

2007-11-18  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: removed.

	* configure.in: removed leftover references to the gimptool script.

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add SAVE_DIALOG log domain.

	* app/dialogs/file-save-dialog: port debug output to GIMP_LOG().

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: add DIALOG_FACTORY log domain.

	* app/widgets/gimpdialogfactory.c: port debug output to GIMP_LOG().

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: changed to work with different
	compiler-specific ways of doing macro varargs. Also cope with no
	macro vararg support at all. Pointed out by Hans Breuer.

2007-11-18  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_tool_events): improve debug output.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* app/base/base-utils.c (get_physical_memory_size): added a cast
	to avoid an integer overflow on 32bit machines.

2007-11-17  Sven Neumann  <sven@gimp.org>

	* tools/gimptool.c: minor cleanup, hopefully not breaking anything.
