@@ -1,3 +1,8 @@
+2007-11-19  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcurveview.[ch]: draw a base-line with the grid.
+	Not sure if this should stay enabled for the Curves tool...
+
 2007-11-19  Tor Lillqvist  <tml@novell.com>
 
 	* libgimpwidgets/gimpcolorscale.c
